Fix form display on mobile

--- a/src/features/browse/Search.module.less
+++ b/src/features/browse/Search.module.less
@@ -10,7 +10,34 @@
     font-size: @heading-4-size;
   }
 
-  :global(.ant-select-selector) {
-    min-width: 240px;
+  fieldset {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+
+    :global(.ant-select-selector) {
+      min-width: 120px;
+
+      @media (min-width: @screen-sm) {
+        min-width: 180px;
+      }
+
+      @media (min-width: @screen-md) {
+        min-width: 240px;
+      }
+    }
+
+    & > * {
+      margin-right: 24px;
+      margin-bottom: 12px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  :global(.ant-collapse-content-box) {
+    padding-left: 0;
   }
 }
